# mtv_dl_web

./: LICENSE  README.md  package.json  pyproject.toml  server.py
mtv_dl_web/: main.py  server.py  serversentevent.py
mtv_dl_web/templates/: base.html  index.html  main.js
