[tool.poetry]
name = "mtv_dl_web"
version = "0.1.0"
description = "A web interface for mtv_dl"
authors = ["Mike Stipicevic <stipredirect+mtv_dl_web@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mtv-dl = "^0.16"
Quart = "^0.13.1"
paginate = "^0.5.6"
cachetools = "^4.2.1"
asyncache = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
